@@ -8,6 +8,12 @@ AC_PROG_INSTALL
 AC_HAVE_LIBRARY(socket)
 AC_HAVE_LIBRARY(nsl)
 AC_FUNC_CHECK(utimes,AC_DEFINE(HAS_UTIMES))
+AC_HAVE_HEADERS(sys/filio.h)
+AC_COMPILE_CHECK([F_SETOWN],
+[#include <sys/types.h>
+#include <fcntl.h>],
+[1+F_SETOWN;], 
+AC_DEFINE(HAVE_SETOWN))
 KRB_INCLUDE
 WITH_KRB5ROOT
 WITH_KRB4
