@@ -49,6 +49,11 @@ static char sccsid[] = "@(#)rsh.c	5.7 (Berkeley) 9/20/88";
 #include <pwd.h>
 #include <netdb.h>
      
+#ifdef HAVE_SYS_FILIO_H
+/* get FIONBIO from sys/filio.h, so what if it is a compatibility feature */
+#include <sys/filio.h>
+#endif
+
 #ifdef KERBEROS
 #include <krb5/krb5.h>
 #include <krb5/asn1.h>
