@@ -1,3 +1,8 @@
+Tue Jul 26 00:25:57 1994  Mark Eichin  (eichin@cygnus.com)
+
+	* configure.in: Added tests for HAVE_SETOWN, HAVE_SYS_FILIO_H.
+	* krlogin.c, krsh.c, krshd.c, krlogin.c, krlogind.c: use them.
+
 Sat Jul 23 08:48:50 1994  Tom Yu  (tlyu@dragons-lair)
 
 	* kcmd.c:
